<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/search_RE_type_txt"
        style="@style/theme_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/search_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/search_RE_type_house_cb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/search_house"
        app:layout_constraintStart_toEndOf="@+id/search_RE_type_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_type_txt" />

    <CheckBox
        android:id="@+id/search_RE_type_flat_cb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_flat"
        app:layout_constraintEnd_toEndOf="@+id/search_RE_type_house_cb"
        app:layout_constraintStart_toStartOf="@+id/search_RE_type_house_cb"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_type_house_cb" />

    <CheckBox
        android:id="@+id/search_RE_type_penthouse_cb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/search_penthouse"
        app:layout_constraintStart_toEndOf="@+id/search_RE_type_house_cb"
        app:layout_constraintTop_toTopOf="@+id/search_RE_type_house_cb" />

    <CheckBox
        android:id="@+id/search_RE_type_duplex_cb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_duplex"
        app:layout_constraintEnd_toEndOf="@+id/search_RE_type_penthouse_cb"
        app:layout_constraintStart_toStartOf="@+id/search_RE_type_penthouse_cb"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_type_penthouse_cb" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/search_RE_sold_switch"
        style="@style/theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/search_sold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_RE_type_penthouse_cb"
        app:layout_constraintTop_toTopOf="@+id/search_RE_type_txt" />


    <TextView
        android:id="@+id/search_RE_price_title_txt"
        style="@style/theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_price_title"
        app:layout_constraintStart_toStartOf="@+id/search_RE_type_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_type_flat_cb" />


    <com.google.android.material.slider.RangeSlider
        android:id="@+id/search_RE_price_Slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stepSize="5000.0"
        android:valueFrom="20000.0"
        android:valueTo="900000000.0"
        app:layout_constraintEnd_toEndOf="@+id/search_RE_sold_switch"
        app:layout_constraintStart_toStartOf="@+id/search_RE_surface_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_price_title_txt"
        app:values="@array/initial_range_prices_slider_values" />

    <TextView
        android:id="@+id/search_RE_surface_txt"
        style="@style/theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_surface"
        app:layout_constraintStart_toStartOf="@+id/search_RE_price_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_price_Slider" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/search_RE_surface_Slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:values="@array/initial_range_slider_values"
        android:valueFrom="20.0"
        android:valueTo="1000.0"
        android:stepSize="10.0"
        app:layout_constraintEnd_toEndOf="@+id/search_RE_sold_switch"
        app:layout_constraintStart_toStartOf="@+id/search_RE_surface_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_surface_txt" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_RE_room_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_rooms"
        app:layout_constraintStart_toStartOf="@+id/search_RE_surface_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_surface_Slider"
        app:startIconDrawable="@drawable/baseline_home_24"
        app:suffixText="@string/search_nb">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_RE_room_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:inputType="number"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_RE_bedrooms_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/search_bedrooms"
        app:suffixText="@string/search_nb"
        app:layout_constraintStart_toStartOf="@+id/search_RE_room_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_room_txt"
        app:startIconDrawable="@drawable/baseline_bedroom_child_24" >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_RE_bedrooms_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="number"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_RE_bathrooms_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/search_bathrooms"
        app:layout_constraintStart_toEndOf="@+id/search_RE_bedrooms_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_room_txt"
        app:startIconDrawable="@drawable/baseline_bathroom_24"
        app:suffixText="@string/search_nb">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_RE_bathrooms_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="number"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/search_RE_approximate_txt"
        style="@style/theme_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_approximate"
        app:layout_constraintStart_toStartOf="@+id/search_RE_bedrooms_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_bedrooms_txt" />

    <CheckBox
        android:id="@+id/search_RE_school_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_school"
        app:layout_constraintStart_toStartOf="@+id/search_RE_approximate_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_approximate_txt" />

    <CheckBox
        android:id="@+id/search_RE_commerce_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_commerce"
        app:layout_constraintStart_toEndOf="@+id/search_RE_school_cb"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_approximate_txt" />

    <CheckBox
        android:id="@+id/search_RE_park_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_park"
        app:layout_constraintStart_toEndOf="@+id/search_RE_commerce_cb"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_approximate_txt" />


    <TextView
        android:id="@+id/search_RE_photo_txt"
        style="@style/theme_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_photos"
        app:layout_constraintStart_toStartOf="@+id/search_RE_bedrooms_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_school_cb" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_RE_city_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/search_city"
        app:layout_constraintStart_toEndOf="@+id/search_RE_room_txt"
        app:layout_constraintTop_toTopOf="@+id/search_RE_room_txt"
        app:startIconDrawable="@drawable/ic_baseline_location_city_24"
        app:suffixText="@string/search_nb">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_RE_city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPostalAddress"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/search_RE_photo1_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_1"
        app:layout_constraintStart_toStartOf="@+id/search_RE_approximate_txt"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_photo_txt" />

    <CheckBox
        android:id="@+id/search_RE_photo2_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/search_2"
        app:layout_constraintStart_toEndOf="@+id/search_RE_photo1_cb"
        app:layout_constraintTop_toTopOf="@+id/search_RE_photo1_cb" />

    <CheckBox
        android:id="@+id/search_RE_photo3_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/search_3"
        app:layout_constraintStart_toEndOf="@+id/search_RE_photo2_cb"
        app:layout_constraintTop_toTopOf="@+id/search_RE_photo1_cb" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/search_RE_button_reset_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_restart_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_photo1_cb" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/search_RE_button_validate_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toEndOf="@+id/search_RE_button_reset_iv"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_photo1_cb" />

    <ImageView
        android:id="@+id/search_RE_button_date_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintBottom_toTopOf="@+id/search_RE_price_title_txt"
        app:layout_constraintEnd_toEndOf="@+id/search_RE_sold_switch"
        app:layout_constraintStart_toStartOf="@+id/search_RE_sold_switch"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_sold_switch"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/search_RE_text_date_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text="Date min"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/search_RE_button_date_iv"
        app:layout_constraintStart_toStartOf="@+id/search_RE_button_date_iv"
        app:layout_constraintTop_toBottomOf="@+id/search_RE_button_date_iv" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>