<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loan_amount_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:hint="@string/loan_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="@string/dollar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loan_amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loan_contribution_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/loan_contribution"
        app:layout_constraintStart_toStartOf="@+id/loan_amount_txt"
        app:layout_constraintTop_toBottomOf="@+id/loan_amount_txt"
        app:suffixText="@string/dollar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loan_contribution_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loan_interest_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/loan_interest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/loan_amount_txt"
        app:layout_constraintTop_toTopOf="@+id/loan_amount_txt"
        app:suffixText="@string/loan_pourcentage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loan_interest_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="numberDecimal"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loan_term_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/loan_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loan_interest_txt"
        app:layout_constraintTop_toTopOf="@+id/loan_contribution_txt"
        app:suffixText="@string/loan_years">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loan_term_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:inputType="number"
            android:maxEms="10"
            android:singleLine="true"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/loan_button_calcul_iv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/description_button_calcul"
        android:src="@drawable/ic_baseline_calculate_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_contribution_txt" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_button_calcul_iv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loan_calcul_interest_title_txt"
                style="@style/theme_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/loan_interest"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loan_calcul_interest_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/loan_calcul_interest_title_txt"
                app:layout_constraintStart_toEndOf="@+id/loan_calcul_interest_title_txt"
                app:layout_constraintTop_toTopOf="@+id/loan_calcul_interest_title_txt" />

            <TextView
                android:id="@+id/loan_calcul_mount_title_txt"
                style="@style/theme_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/loan_per_month"
                app:layout_constraintStart_toStartOf="@+id/loan_calcul_interest_title_txt"
                app:layout_constraintTop_toBottomOf="@+id/loan_calcul_interest_title_txt" />

            <TextView
                android:id="@+id/loan_calcul_mount_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/loan_calcul_mount_title_txt"
                app:layout_constraintStart_toEndOf="@+id/loan_calcul_mount_title_txt"
                app:layout_constraintTop_toTopOf="@+id/loan_calcul_mount_title_txt" />

            <TextView
                android:id="@+id/loan_total_title_txt"
                style="@style/theme_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/loan_total_amount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/loan_calcul_mount_title_txt"
                app:layout_constraintTop_toBottomOf="@+id/loan_calcul_mount_title_txt" />

            <TextView
                android:id="@+id/loan_calcul_total_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/loan_total_title_txt"
                app:layout_constraintStart_toEndOf="@+id/loan_total_title_txt"
                app:layout_constraintTop_toTopOf="@+id/loan_total_title_txt" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>